// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add flow comments 1`] = `
"// @flow
import type { HOGE_TYPE } from './unknown';

export const HOGE: HOGE_TYPE = 'hoge/HOGE_ACTION';"
`;

exports[`add flow comments when exits flow block comments 1`] = `
"// @flow
import type { HOGE_TYPE, FUGA_TYPE } from './unknown';

export const HOGE: HOGE_TYPE = 'hoge/HOGE_ACTION';
export const FUGA: FUGA_TYPE = 'fuga/FUGA_ACTION';"
`;

exports[`add flow comments when exits flow comments 1`] = `
"// @flow
import type { HOGE_TYPE, FUGA_TYPE } from './unknown';

export const HOGE: HOGE_TYPE = 'hoge/HOGE_ACTION';
export const FUGA: FUGA_TYPE = 'fuga/FUGA_ACTION';"
`;

exports[`export 1`] = `
"// @flow
import type { HOGE_TYPE, FUGA_TYPE } from './actionTypes';

export const HOGE: HOGE_TYPE = 'hoge/HOGE_ACTION';
export const FUGA: FUGA_TYPE = 'fuga/FUGA_ACTION';"
`;

exports[`opts.filename 1`] = `
"// @flow
import type { HOGE_TYPE, FUGA_TYPE } from './actionTypes';

export const HOGE: HOGE_TYPE = 'hoge/HOGE_ACTION';
export const FUGA: FUGA_TYPE = 'fuga/FUGA_ACTION';"
`;

exports[`real world 1`] = `
"// @flow
import type { ADD_HOGE_TYPE, DELETE_HOGE_TYPE, EDIT_HOGE_TYPE } from './actionTypes';

export const ADD_HOGE: ADD_HOGE_TYPE = 'Hoge/ADD';
export const DELETE_HOGE: DELETE_HOGE_TYPE = 'Hoge/DELETE';
export const EDIT_HOGE: EDIT_HOGE_TYPE = 'Hoge/EDIT';"
`;

exports[`with extra 1`] = `
"// @flow
import type { HOGE_TYPE, FUGA_TYPE } from './unknown';

export const HOGE: HOGE_TYPE = 'hoge/HOGE_ACTION';
export const FUGA: FUGA_TYPE = 'fuga/FUGA_ACTION';"
`;
